# Hardware

./: .gitmodules
firmware/: CMakeLists.txt  initPlatformio.sh  platformio.ini
firmware/src/: HttpHeader.h  HttpMethod.cpp  RestClient.cpp  RestClient.h  RestClientResponse.h  RestEndpoint.cpp  RestEndpoint.h  RestHttpServer.cpp  RestHttpServer.h  WifiClientResponse.cpp  WifiClientResponse.h  main.cpp
firmware/src/Channel/: ChannelManager.h
firmware/src/Domain/Init/: Init.h  InitInput.h  JsonInitInput.h
firmware/src/Domain/Settings/: JsonSettingsInput.h  Settings.h  SettingsInput.h
firmware/src/Domain/valoplus/: adressableRgbLedJsonService.h  controllableElement.h  group.h  groupJsonService.h  masterJsonService.h  rgbLedJsonService.h  singleColorLedJsonService.h  slave.h  slaveJsonService.h  state.h  stateAdressableRgbLedJsonService.h
firmware/src/Helper/: JsonHelper.cpp  JsonHelper.h
firmware/src/Light/: ChannelManager.cpp  ChannelManager.h
firmware/src/OTA/: OTAManager.cpp  OTAManager.h
firmware/src/RestHttpServer/: HttpHeader.cpp  HttpMethod.h  HttpPayload.cpp  HttpPayload.h  RestClientResponse.cpp  RestHttpServer.cpp  RestHttpServer.h  WifiClientResponse.cpp  WifiClientResponse.h
firmware/src/RestHttpServer/Endpoint/: ActualEndpoint.cpp  ActualEndpoint.h  RestEndpoint.h  UndefinedEndpoint.cpp  UndefinedEndpoint.h  UrlToEndpointMapper.cpp  UrlToEndpointMapper.h
firmware/src/RestHttpServer/RestUrl/: RestUrlConstantElement.cpp  RestUrlConstantElement.h  RestUrlElement.cpp  RestUrlElement.h  RestUrlPlaceholder.cpp  RestUrlPlaceholder.h
firmware/src/RestHttpServer/Url/: Url.cpp  Url.h  UrlPathElement.cpp  UrlPathElement.h  UrlPathParameter.cpp  (+1 more)
firmware/src/WebServer/: ChannelHandler.h  InitHandler.h  RESTHandler.h  SettingsHandler.h  WebServer.cpp  WebServer.h
firmware/test/: CMakeLists.txt
(+52 files in other folders)
